fix(ccls-1829): enable collection and parsing of sort fields
